-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.5.0-beta
-
Win7 64bit
MinGW/GDB
Doing the steps from QTCREATORBUG-7269 without hitting 'Step into' but switching the threads instead resulted in Creator crashing.
This isn't reproducable all the time and maybe related to the above mentioned bug anyway.
- relates to
-
QTCREATORBUG-7269 Creator crashes when stepping into an interrupted endless loop
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-7270 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 23212,1 | Fix crash on removing null ITextMark | 2.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |