Fix crash on removing null ITextMark

Previously that did no harm, but due to recent changes this leads to a
crash.

Task-number: QTCREATORBUG-7270
Task-number: QTCREATORBUG-7269
Change-Id: Ibe405e33c8ae4cc8503c67fa122467332bc10f53
Reviewed-by: hjk <qthjk@ovi.com>